02-pod-no-internet/01/sample-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-test
  labels: {app: curl-test}
spec:
  containers:
  - name: curl
    image: curlimages/curl:latest
    command: ["sleep","3600"]
    # interactive shell later via kubectl exec
  restartPolicy: Never
