02-pod-no-internet/01/networkpolicy-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress: []  # explicit deny to everything
